--- a/view/index.html
+++ b/view/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Float grid demo</title>
+    <title>BroMirror</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.css"/>
@@ -26,9 +26,9 @@
         }
 
         .grid-stack-item-content {
-            color: #2c3e50;
+            color: #fc3;
             text-align: center;
-            background-color: #18bc9c;
+            background-color: #00f;
         }
     </style>
 </head>
@@ -77,6 +77,8 @@
                             };
                     this.grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
                         node.x, node.y, node.width, node.height);
+                    this.grid.add_widget( jQuery( '<div class="grid-stack-item"><div class="grid-stack-item-content">' + 'abc' + '</div></div>' ), node.x, node.y, node.width, node.height );
+
                     return false;
                 }.bind(this);
 
