--- a/view/index.html
+++ b/view/index.html
@@ -67,6 +67,9 @@
                 ];
 
                 this.grid = $('.grid-stack').data('gridstack');
+                
+                this.grid.width = screen.width;
+                this.grid.height = screen.height;
 
                 this.addNewWidget = function () {
                     var node = this.items.pop() || {
@@ -75,9 +78,10 @@
                                 width: 1 + 3 * Math.random(),
                                 height: 1 + 3 * Math.random()
                             };
-                    this.grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
-                        node.x, node.y, node.width, node.height);
-                    this.grid.add_widget( jQuery( '<div class="grid-stack-item"><div class="grid-stack-item-content">' + 'abc' + '</div></div>' ), node.x, node.y, node.width, node.height );
+                    // this.grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
+                        // node.x, node.y, node.width, node.height);
+
+                    this.grid.add_widget($( '<div class="grid-stack-item"><div class="grid-stack-item-content">' + node.content + '</div></div>' ), node.x, node.y, node.width, node.height );
 
                     return false;
                 }.bind(this);
