css in separate file

--- a/view/index.html
+++ b/view/index.html
@@ -19,18 +19,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.jQueryUI.js"></script>
+    <script type="text/javascript" src ="http://localhost:8888/scripts/grid.js"></script>
 
-    <style type="text/css">
-        .grid-stack {
-            background: lightgoldenrodyellow;
-        }
+    <link rel="stylesheet" href="../css/grid.css"/>
 
-        .grid-stack-item-content {
-            color: #fc3;
-            text-align: center;
-            background-color: #00f;
-        }
-    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -46,6 +38,5 @@
         </div>
     </div>
 
-    <script type ="text/javascript" src ="../scripts/grid.js"/>
 </body>
 </html>
