--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.css"/>
-
+    <link rel="stylesheet" href="gridstack-extra.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.0/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -20,6 +20,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.jQueryUI.js"></script>
     <script type="text/javascript" src ="http://localhost:8888/scripts/grid.js"></script>
+
+
 
     <link rel="stylesheet" href="../css/grid.css"/>
 
@@ -37,6 +39,56 @@
         <div class="grid-stack">
         </div>
     </div>
+    <!--<script type="text/javascript">
+        var app = angular.module('GridStack', ['gridstack-angular']).
+          controller('DemoCtrl', function($scope, $log) {
 
+            $scope.widgets = [{ x:0, y:0, width:1, height:1 }, { x:0, y:0, width:3, height:1 }];
+
+            $scope.options = {
+                cellHeight: 200,
+                verticalMargin: 10
+            };
+
+            $scope.addWidget = function() {
+                var newWidget = { x:0, y:0, width:1, height:1 };
+                $scope.widgets.push(newWidget);
+            };
+
+            $scope.removeWidget = function(w) {
+                var index = $scope.widgets.indexOf(w);
+                $scope.widgets.splice(index, 1);
+            };
+
+            $scope.onChange = function(event, items) {
+                $log.log("onChange event: "+event+" items:"+items);
+            };
+
+            $scope.onDragStart = function(event, ui) {
+                $log.log("onDragStart event: "+event+" ui:"+ui);
+            };
+
+            $scope.onDragStop = function(event, ui) {
+                $log.log("onDragStop event: "+event+" ui:"+ui);
+            };
+
+            $scope.onResizeStart = function(event, ui) {
+                $log.log("onResizeStart event: "+event+" ui:"+ui);
+            };
+
+            $scope.onResizeStop = function(event, ui) {
+                $log.log("onResizeStop event: "+event+" ui:"+ui);
+            };
+
+            $scope.onItemAdded = function(item) {
+                $log.log("onItemAdded item: "+item);
+            };
+
+            $scope.onItemRemoved = function(item) {
+                $log.log("onItemRemoved item: "+item);
+            };
+
+        });
+    </script>-->
 </body>
 </html>
